# iron_vault_pkg

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: simple_test.dart  vault_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/windows/: CMakeLists.txt
ios/: iron_vault_pkg.podspec
lib/: iron_vault_pkg.dart
lib/src/: vault_query.dart
linux/: CMakeLists.txt
macos/: iron_vault_pkg.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: crypto.rs  mod.rs  types.rs  vault.rs
rust/src/engine/: audit.rs  backup.rs  connection.rs  convert.rs  crypto.rs  export.rs  migration.rs  mod.rs  notifier.rs  onnx_embed.rs  query_builder.rs  search.rs  semantic.rs  sync.rs  transaction.rs  validate.rs  vector_clock.rs  write_ops.rs
rust/tests/: integration.rs  wal_test.rs
rust/tests/common/: mod.rs
rust/tests/suite/: audit.rs  auto_audit.rs  auto_fts.rs  backup_export.rs  cross_phase.rs  crud.rs  edge_cases.rs  encryption.rs  encryption_crypto.rs  key_rotation.rs  lifecycle.rs  memory_safety.rs  migrations.rs  mod.rs  performance.rs  pool.rs  query_conditions.rs  query_read.rs  query_write.rs  reactive.rs  search.rs  semantic.rs  stats.rs  stress_fuzz.rs  sync_engine.rs  tenant.rs  transactions.rs  wal.rs
windows/: CMakeLists.txt
(+17 files in other folders)
