[package]
name = "iron_vault_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
zeroize = { version = "1", features = ["derive"] }
anyhow = "1"
hex = "0.4"
sha2 = "0.10"
argon2 = "0.5"
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
